--- a/views/home.ejs
+++ b/views/home.ejs
@@ -231,7 +231,7 @@
 	  </form>
   </div>
 </div>
-<div class="ui threaded comments" id="<%= complain._id %>">
+<div class="ui threaded comments" id="<%= post._id %>">
   <h3 class="ui dividing header">Comments</h3>
 	<% for(var i = 0; i < post.comments.length; i++){ %>
 	<% if(post.comments[i].body){ %>
