--- a/views/home.ejs
+++ b/views/home.ejs
@@ -206,7 +206,7 @@
 <div class="ui card">
   <div class="content">
   <a href="/profile/<%= post.author.id %>" style="margin-bottom: 20px;" class="inverted">
-		<img class="ui avatar image" src="http://grand-view.herokuapp.com/image/<%= post.author.image %>">
+		<img class="ui avatar image" style="margin-bottom: 20px;" src="http://grand-view.herokuapp.com/image/<%= post.author.image %>">
 		<%= post.author.username %> 
 	</a> 
 <% if(posts.indexOf(post) == 0){ %>
