--- a/views/home.ejs
+++ b/views/home.ejs
@@ -230,7 +230,7 @@
     	</div>
 	  </form>
 	  <form action="/delete/post/<%= post._id %>?_method=DELETE" method="POST">
-			<button class="btn btn-danger btn-block inverted">Delete</button>
+			<button class="btn btn-danger btn-block inverted" style="margin-top: 20px;">Delete</button>
 	</form>
   </div>
 </div>
