--- a/views/beta.ejs
+++ b/views/beta.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Grand View</title>
+        <title>Grand View 2.0</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
         <link rel="stylesheet" href="./public/stylesheets/landing.css">
 		<style>
