--- a/views/beta.ejs
+++ b/views/beta.ejs
@@ -101,7 +101,7 @@
     </head>
     <body>
     <div id="landing-header">
- 		<h1>Welcome to Grand View!</h1>
+ 		<h1>Welcome to Grand View 2.0!</h1>
 		<h5>Developed By: <a href="/profile/5f5b84113c90da046d1df8fa">Mourad Sherif</a></h5>
 		<div style="display: block">
 			<% if(user){ %>
