--- a/views/home.ejs
+++ b/views/home.ejs
@@ -203,7 +203,7 @@
 </div>
 <% }) %>
 <% posts.forEach(post => { %>
-<div class="ui card">
+<div class="ui card" id="<%= post._id %>">
   <div class="content">
   <a href="/profile/<%= post.author.id %>" style="margin-bottom: 20px;" class="inverted">
 		<img class="ui avatar image" style="margin-bottom: 20px;" src="http://grand-view.herokuapp.com/image/<%= post.author.image %>">
