--- a/views/home.ejs
+++ b/views/home.ejs
@@ -74,7 +74,7 @@
 	<p>
 		<%= suggestion.body %>
 	</p>  
-  <div class="extra content">
+  <div class="extra content" style="height: 120px">
 	  <form action="/comment/Suggestion/<%= suggestion._id %>" method="POST">
 		<div class="ui large transparent left icon input">
       		<i class="comment icon"></i> <input type="text" placeholder="Add Comment..." name="comment">
