--- a/views/home.ejs
+++ b/views/home.ejs
@@ -313,7 +313,7 @@
       <% } %>
     </div>
 </div>
-<div class="ui threaded comments">
+<div class="ui threaded comments" id="service._id">
   <h3 class="ui dividing header">Comments</h3>
 	<% for(var i = 0; i < service.comments.length; i++){ %>
 	<div class="comment">
@@ -390,7 +390,7 @@
 	<% } %>
     </div>
 </div>
-<div class="ui threaded comments">
+<div class="ui threaded comments" id="event._id">
   <h3 class="ui dividing header">Comments</h3>
 	<% for(var i = 0; i < event.comments.length; i++){ %>
 		<div class="comment">
