--- a/views/photo.ejs
+++ b/views/photo.ejs
@@ -4,7 +4,7 @@
         <h1 class="text-center display-4 my-4">Upload Your Profile Photo</h1>
         <form action="/upload" method="POST" enctype="multipart/form-data">
           <div class="custom-file mb-3">
-            <input type="file" name="file" id="file" class="custom-file-input">
+            <input type="file" name="file" id="file" class="custom-file-input" accept="image/*">
             <label for="file" class="custom-file-label">Choose File</label>
           </div>
           <input type="submit" value="Submit" class="btn btn-primary btn-block">
