--- a/views/myProfile.ejs
+++ b/views/myProfile.ejs
@@ -19,7 +19,7 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="/new">Create A New</a>
-		  <a onclick="dark()" class="dropdown-item">Dark Mode</a>
+	<a onclick="dark()" class="dropdown-item" id="click" style="cursor: pointer">Dark Mode</a>
           <a class="dropdown-item" href="/users/logout">Logout</a>
         </div>
       </li>
