--- a/views/reservers.ejs
+++ b/views/reservers.ejs
@@ -1,3 +1,6 @@
+<% if(profiles.length == 0) { %>
+	<h1 style="text-align: center; margin-top: 25px;">No One Has Joined Yet</h1>
+<% } %>
 <% profiles.forEach(profile => { %>
 		<div class="card">
 	  <div class="card-body">
