--- a/views/home.ejs
+++ b/views/home.ejs
@@ -300,7 +300,7 @@
 	 <div class="extra content">
 	 <% if(service.author.id == user._id){ %>
 		<a class="btn btn-secondary btn-block inverted" href="/service/image/<%= service._id %>" style="color: white">Add An Image</a>
-		<a class="btn btn-primary btn-block inverted" href="/reservers/service/<%= service._id %>" style="color: white">View Reservers</a>
+		<a class="btn btn-primary btn-block inverted" href="/reservers/service/<%= service._id %>" style="color: white">View Who Ordered</a>
 		<form action="/delete/service/<%= service._id %>?_method=DELETE" method="POST">
 			<button class="btn btn-danger btn-block inverted">Delete</button>
 		</form>
@@ -380,7 +380,7 @@
 		 <div class="extra content">
 		<% if(event.author.id == user._id){ %>
 		<a class="btn btn-secondary btn-block inverted" href="/event/image/<%= event._id %>" style="color: white">Add An Image</a>
-		<a class="btn btn-primary btn-block inverted" href="/reservers/event/<%= event._id %>" style="color: white">View Reservers</a>
+		<a class="btn btn-primary btn-block inverted" href="/reservers/event/<%= event._id %>" style="color: white">View Who Joined</a>
 		<form action="/delete/event/<%= event._id %>?_method=DELETE" method="POST">
 			<button class="btn btn-danger btn-block inverted">Delete</button>
 		</form>
