--- a/views/voters.ejs
+++ b/views/voters.ejs
@@ -28,7 +28,7 @@
 </nav>
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
-    <h1 class="display-4">Number Of Voters Who Said Yes!</h1>
+    <h1 class="display-4">Likes</h1>
 	  <hr>
     <p class="lead"><%= yes %></p>
   </div>
@@ -36,8 +36,8 @@
 
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
-    <h1 class="display-4">Number Of Voters Who Said No!</h1>
+    <h1 class="display-4">Dislikes</h1>
 	<hr>
-		<h1 class="lead"><%= no %></h1>
+		<h1 class="lead" style="text-align: center; font-size: 50px;"><%= no %></h1>
   </div>
 </div>
