--- a/views/voters.ejs
+++ b/views/voters.ejs
@@ -30,7 +30,7 @@
   <div class="container">
     <h1 class="display-4">Likes</h1>
 	  <hr>
-    <p class="lead"><%= yes %></p>
+    <p class="lead" style="font-size: 50px; text-align: center"><%= yes %></p>
   </div>
 </div>
 
