--- a/views/register.ejs
+++ b/views/register.ejs
@@ -68,6 +68,7 @@
             name="apartment"
             class="form-control"
             placeholder="eg: U-606, V-402, L-305"
+	    style="text-transform: uppercase"
             value="<%= typeof apartment != 'undefined' ? apartment : '' %>"
           />
         </div>
