--- a/views/register.ejs
+++ b/views/register.ejs
@@ -79,8 +79,7 @@
             name="bio"
             class="form-control"
             placeholder="bio"
-			>
-		</textarea>
+	  ></textarea>
         </div>
 		<label for="pass">Phone Number</label>
           <input
