--- a/views/home.ejs
+++ b/views/home.ejs
@@ -393,7 +393,7 @@
 	<% } %>
     </div>
 </div>
-<div class="ui threaded comments" id="event._id">
+<div class="ui threaded comments" id="<%= event._id %>">
   <h3 class="ui dividing header">Comments</h3>
 	<% for(var i = 0; i < event.comments.length; i++){ %>
 		<div class="comment">
