--- a/views/home.ejs
+++ b/views/home.ejs
@@ -401,7 +401,7 @@
 			  <img src="http://grand-view.herokuapp.com/image/<%= event.comments[i].image %>" class="inverted">
 			</a>
 		<div class="content">
-		  <a class="author" href="event.author.ids"><%= event.comments[i].username %></a>
+		  <a class="author" href="<%= event.author.id %>"><%= event.comments[i].username %></a>
 		  <div class="metadata">
 			<span class="date"><%= event.comments[i].created %> <%= event.comments[i].createdTime %></span>
 		  </div>
