--- a/views/home.ejs
+++ b/views/home.ejs
@@ -41,15 +41,15 @@
 </nav>
 <% suggestions.forEach(suggestion => { %>
 <% if(suggestions.indexOf(suggestion) == 0){ %>
-<div class="ui card" id="suggestions">
+<div class="ui card" style="background-color: green; color: white;" id="suggestions">
 	<div class="content" id="<%= suggestion._id %>">
-		 <div class="right floated meta"><%= suggestion.voteBy %></div>
+		 <div class="right floated meta" style="color: white"><%= suggestion.voteBy %></div>
 		Suggestion
 	</div>
 	<% } else { %>
-	<div class="ui card" id="suggestion._id">
+	<div class="ui card" style="background-color: green; color: white;" id="<%= suggestion._id %>">
 	<div class="content">
-		 <div class="right floated meta"><%= suggestion.voteBy %></div>
+		 <div class="right floated meta" style="color: white"><%= suggestion.voteBy %></div>
 		Suggestion
 	</div>
 		<% } %>
@@ -130,15 +130,15 @@
 <% }) %>
 <% complains.forEach(complain => { %>
 <% if(complains.indexOf(complain) == 0){ %>
-<div class="ui card" id="complains">
+<div class="ui card" style="background-color: red; color: white;" id="complains">
 	<div class="content" id="<%= complain._id %>">
 		 <div class="right floated meta"><%= complain.type %></div>
 		Complain
 	</div>
 	<% }else { %>
-	<div class="ui card" id="<%= complain._id %>">
+	<div class="ui card" style="background-color: red; color: white" id="<%= complain._id %>">
 	<div class="content">
-		 <div class="right floated meta"><%= complain.type %></div>
+		 <div class="right floated meta" style="color: white"><%= complain.type %></div>
 		Complain
 	</div>
 		<% } %>
@@ -204,12 +204,13 @@
 <% posts.forEach(post => { %>
 <div class="ui card" id="<%= post._id %>">
   <div class="content">
-  <div>
-  <a href="/profile/<%= post.author.id %>" style="margin-bottom: 20px;" class="inverted">
+  <div style="background-color: saddlebrown">
+  <a href="/profile/<%= post.author.id %>" style="margin-bottom: 20px; color: white" class="inverted">
 		<img class="ui avatar image" style="margin-bottom: 20px;" src="http://grand-view.herokuapp.com/image/<%= post.author.image %>">
 		<%= post.author.username %> 
 	</a> 
 </div>
+<div>
 <% if(posts.indexOf(post) == 0){ %>
     <div class="header" id="posts"><%= post.title %></div>
 <% } else { %>
@@ -221,6 +222,7 @@
       <span><%= post.created %> <%= post.createdTime %></span>
     </div>
     <p><%= post.post %></p>
+  </div>
   </div>
     <div class="extra content">
 	  <form action="/comment/Post/<%= post._id %>" method="POST">
@@ -260,8 +262,8 @@
 <% }) %>
 <% services.forEach(service => { %>
 <% if(services.indexOf(service) == 0){ %>
-<div class="ui card" id="services">
-	<div class="content" id="<%= service._id %>">
+<div class="ui card" id="services" style="background-color: blue; color: white">
+	<div class="content" id="<%= service._id %>" style="color: white">
 		 <div class="right floated meta"><%= service.type %></div>
 		Service
 	</div>
@@ -340,8 +342,8 @@
 <div class="container">
 <% events.forEach(event => { %>
 <% if(events.indexOf(event) == 0){ %>
-<div class="ui card" id="event">
-	<div class="content" id="<%= event._id %>">
+<div class="ui card" style="background-color: orange; color: white;" id="event">
+	<div class="content" id="<%= event._id %>" style="color: white">
 		 <div class="right floated meta"><%= event.type %></div>
 		Event
 	</div>
