--- a/views/home.ejs
+++ b/views/home.ejs
@@ -202,8 +202,8 @@
 </div>
 <% }) %>
 <% posts.forEach(post => { %>
-<div class="ui card" id="<%= post._id %>" style="padding: 0">
-  <div class="content">
+<div class="ui card" id="<%= post._id %>">
+  <div class="content" style="padding: 0">
   <div style="background-color: saddlebrown; padding: 10px; padding-bottom: 0;">
   <a href="/profile/<%= post.author.id %>" style="margin-bottom: 20px; color: white" class="inverted">
 		<img class="ui avatar image" style="margin-bottom: 20px;" src="http://grand-view.herokuapp.com/image/<%= post.author.image %>">
