--- a/views/home.ejs
+++ b/views/home.ejs
@@ -208,7 +208,7 @@
 <% posts.forEach(post => { %>
 <div class="ui card" id="<%= post._id %>">
   <div class="content" style="padding: 0">
-  <div style="background-color: saddlebrown; padding: 10px; padding-bottom: 0;">
+  <div style="background-color: orangered; padding: 10px; padding-bottom: 0;">
   <a href="/profile/<%= post.author.id %>" style="margin-bottom: 20px; color: white" class="inverted">
 		<img class="ui avatar image" style="margin-bottom: 20px;" src="http://grand-view.herokuapp.com/image/<%= post.author.image %>">
 		<%= post.author.username %> 
