--- a/views/home.ejs
+++ b/views/home.ejs
@@ -53,7 +53,7 @@
 	<% } else { %>
 	<div class="ui card" id="<%= suggestion._id %>">
 	<div class="content" style="background-color: green; color: white;">
-		 <div class="right floated meta" style="color: white"><%= suggestion.voteBy %></div>
+		 <div class="right floated meta" style="color: white">Vote By: <%= suggestion.voteBy %></div>
 		Suggestion
 	</div>
 		<% } %>
