--- a/views/home.ejs
+++ b/views/home.ejs
@@ -47,13 +47,13 @@
 <% if(suggestions.indexOf(suggestion) == 0){ %>
 <div class="ui card" id="suggestions">
 	<div class="content" style="background-color: green; color: white;" id="<%= suggestion._id %>">
-		 <div class="right floated meta" style="color: white">Vote By: <%= suggestion.voteBy %></div>
+		 <div class="right floated meta" style="color: white">Vote Per <%= suggestion.voteBy %></div>
 		Suggestion
 	</div>
 	<% } else { %>
 	<div class="ui card" id="<%= suggestion._id %>">
 	<div class="content" style="background-color: green; color: white;">
-		 <div class="right floated meta" style="color: white">Vote By: <%= suggestion.voteBy %></div>
+		 <div class="right floated meta" style="color: white">Vote Per <%= suggestion.voteBy %></div>
 		Suggestion
 	</div>
 		<% } %>
