--- a/views/home.ejs
+++ b/views/home.ejs
@@ -283,6 +283,7 @@
 <% } %>
 	</div>
 <% }) %>
+</div>
 <% posts.forEach(post => { %>
 <div class="ui card" id="<%= post._id %>">
   <div class="content" style="padding: 0">
