--- a/views/home.ejs
+++ b/views/home.ejs
@@ -207,7 +207,7 @@
 <% }) %>
 <% events.forEach(event => { %>
 <% if(events.indexOf(event) == 0){ %>
-<div class="ui card" id="events">
+<div class="ui card" id="event">
 	<div class="content" style="background-color: blue; color: white" id="<%= event._id %>">
 		 <div class="right floated meta" style="color: white"><%= event.type %></div>
 		Event
