--- a/views/suggestion.ejs
+++ b/views/suggestion.ejs
@@ -30,7 +30,7 @@
 <form action="/new/suggestion" method="POST">
 	<div class="form-group">
     <label for="exampleInputEmail1">Title</label>
-    <input type="text" name="title" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+    <input type="text" name="title" required class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
   </div>
   <div class="form-group">
     <label for="exampleInputPassword1">Body</label>
