--- a/views/complains.ejs
+++ b/views/complains.ejs
@@ -31,7 +31,7 @@
 <form action="/new/complain" method="POST">
 	<div class="form-group">
     <label for="exampleInputEmail1">Title</label>
-    <input type="text" name="title" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+    <input type="text" name="title" required class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
   </div>
   <div class="form-group">
     <label for="exampleInputPassword1">Body</label>
