--- a/views/event.ejs
+++ b/views/event.ejs
@@ -30,7 +30,7 @@
 <form action="/new/event" method="POST">
 	<div class="form-group">
     <label for="exampleInputEmail1">Title</label>
-    <input type="text" class="form-control" name="title" id="exampleInputEmail1" aria-describedby="emailHelp">
+    <input type="text" required class="form-control" name="title" id="exampleInputEmail1" aria-describedby="emailHelp">
   </div>
   <div class="form-group">
     <label for="exampleInputPassword1">Body</label>
