--- a/views/post.ejs
+++ b/views/post.ejs
@@ -31,7 +31,7 @@
   <form action="/new/post" method="POST">
       <div class="form-group">
         <label for="exampleInputEmail1">Title</label>
-        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="title" placeholder="Title">
+        <input type="text" required class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="title" placeholder="Title">
       </div>
       <div class="form-group">
         <label for="exampleInputPassword1">Description</label>
