--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,6 +4,9 @@
 	.right.floated.meta {
 		color: white
 	}
+	.image {
+		padding-bottom: 15px;
+	}
 </style>
 <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
   <a class="navbar-brand" href="/">Grand View</a>
